syntax = "proto2";

import "pbrt_proto/pbrt.proto";

package pbrt_proto.v2;

// A directive which sets the Accelerator to use for rendering.
message Accelerator {
  // The type of Accelerator to use. If none are set, then `bvh` should be read
  // as if it is present.
  oneof accelerator_type {
    GridAccelerator grid = 1;  // Use a Grid accelerator
    KdTreeAccelerator kdtree = 2;  // Use a KD-tree accelerator
    BvhAccelerator bvh = 3;  // Use a BVH accelerator (default)
  }
}

// A directive which sets the current area light source.
message AreaLightSource {
  // The type of AreaLightSource. If none are set, then the current area light
  // source should be unset.
  oneof area_light_source_type {
    DiffuseAreaLightSourceV1 diffuse = 1;  // Use a diffuse area light.
  }
}
